# UglyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
UglyEd/: CMakeLists.txt
UglyEd/assets/scenes/: pinkcube.ugly
UglyEd/assets/shaders/: FlatColor.glsl  Texture.glsl
UglyEd/src/: EditorLayer.cpp  EditorLayer.h  UglyEdApp.cpp
UglyEd/src/Panels/: ScenePanel.cpp  ScenePanel.h
engine/: CMakeLists.txt
engine/core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Timestep.h  UglyEngine.h  Window.h  uepch.cpp  uepch.h
engine/debug/: Instrumentor.h
engine/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
engine/imgui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
engine/maths/: Maths.cpp  Maths.h
engine/platform/linux/: LinuxInput.cpp  LinuxInput.h  LinuxPlatformUtils.cpp  LinuxWindow.cpp  LinuxWindow.h
engine/platform/opengl/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
engine/renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2d.cpp  Renderer2d.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SubTexture2d.cpp  SubTexture2d.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
engine/scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
engine/utils/: PlatformUtils.h
sandbox/: CMakeLists.txt
sandbox/assets/shaders/: Texture.glsl
sandbox/src/: ParticleSystem.cpp  ParticleSystem.h  Sandbox2d.cpp  Sandbox2d.h  SandboxApp.cpp
